welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: not found: value GetCouleurSol
		T (pas) = GetCouleurSol()
                          ^